--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Overview, Status & Getting Started
-description: "Cushy Text Is Under Heavy Development: Beware Of Breaking Changes!"
+description: "Cushy Text Releases Between 4/1/2025 and 4/15/2025!"
 menu:
   visible: true
   order: 0
@@ -11,17 +11,19 @@ metas:
 
 # Current Status: <span class="text--success">Launching Soon!</span>
 
-Things are pretty stable, it's time to cut a release people can update from. 
+Things are pretty stable, it's time to cut a release people can update from. It's also time
+for this repo to just be for `cushytext.deno.dev` and release the theme from a brand new 
+repo of its own!
 
 ***I still expect the first testing release (`0.0.1-rc1`) to be ready around the 
 first week of April, 2025. Here's a [release plan](https://github.com/timthepost/cushytext/blob/main/RELEASE-TODO.md) 
 (Github Link) for the release, and how the transition away from this current repo will work.***
 
 You're still welcome to [clone the development repo](https://github.com/timthepost/cushytext),
-but understand that development is moving to an entirely new repository on release, and this 
-will soon just host the theme's site and blog. In short the theme gets its own repo, and this
-site becomes a user of it, just like everyone else. I won't be hosting a live site out of
-the same repo I distribute the theme and plugins from.
+but understand that you're getting a whole copy of this site, and development is moving to an 
+entirely new repository on release. This lets me do my own thing on top of the base
+template, too, and sets me up to be downstream from my own changes, which is good as they'll 
+affect me just like they affect everyone else.
 
 <h2 id="current_focus">Current Focus (All must be done before `0.0.1` testing release)</h2>
  - Everything needed to be a remote theme (`mod.ts` for remote files, 
