Be explicit about nested directories in generated nav

--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -40,6 +40,8 @@ affect me just like they affect everyone else.
  - Re-doing the docs auto nav with the [Nav plugin](https://lume.land/plugins/nav/), 
    which I think also helps solve the nested sections and custom sidebar import 
    complications (though custom would have to follow the nav plugin output format).
+   **Docs currently does not handle nested directories very well with the way it 
+   generates navigation (or headings, in general)**.
  - Blogs should be able to have per-instance archive and tag pages, with control
    over layouts used for each one.
  - Have a default localization plugin / setup.
