docs: lots of meta updates

--- a/src/docs/archetypes.mdx
+++ b/src/docs/archetypes.mdx
@@ -3,6 +3,11 @@ title: Folder Data Files & Waypoints
 description: Things to understand about Cushy Text _data files, and how they affect directories.
 metas:
   image: /docs/archetypes/index.png
+  description: Understanding how Cushy Text for Lume 3 uses the data layer to control page generation.
+  tags:
+    - Self Publishing
+    - Lume Theme
+    - Lume 3 
 menu:
   visible: true
   order: 1
