--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -5,6 +5,10 @@ menu:
   visible: true
   order: 0
 metas:
+  tags:
+    - Self Publishing
+    - Lume Theme
+    - Lume 3 
   description: A primer on how to get started with the CushyText Lume Theme, Currently Under Heavy Development.
   image: /docs/index.png
 ---
