--- a/src/docs/middleware.mdx
+++ b/src/docs/middleware.mdx
@@ -2,6 +2,12 @@
 title: Working With Lume 3 Router Middleware
 description: Building Interactive Features With Lume 3 Middleware
 metas:
+  description: How Cushy Text takes advantage of the Router middleware in Lume 3 to handle form submissions and API requests.
+  tags:
+    - Self Publishing
+    - Lume Theme
+    - Lume 3 Middleware
+    - Lume 3 Router
   image: /docs/middleware/index.png
 menu:
   visible: true
