--- a/src/docs/tag-wikis-tag-feeds.mdx
+++ b/src/docs/tag-wikis-tag-feeds.mdx
@@ -2,6 +2,11 @@
 title: How Do Tag Wikis And Tag Feeds Work?
 description: How to use the built-in tag wiki and tag feed features.
 metas:
+  description: Tag wikis are a feature built into Cushy Text to help bolster collaboration, provide convenience and even bolster SEO.
+  tags:
+    - Self Publishing
+    - Lume Theme
+    - Lume 3 
   image: /docs/tag-wikis-tag-feeds/index.png
 menu:
   visible: true
