--- a/src/docs/theme-plugins.mdx
+++ b/src/docs/theme-plugins.mdx
@@ -2,6 +2,11 @@
 title: The SEO And TOC Plugins
 description: Documentation on the Table Of Contents And SEO Plugins
 metas:
+  description: Documentation on the SEO and TOC plugins that come with Cushy Text, An Interactive Theme For Lume 3
+  tags:
+    - Self Publishing
+    - Lume Theme
+    - Lume 3 
   image: /docs/conductor-plugin/index.png
 menu:
   visible: true
