--- a/src/docs/theme-switchers.mdx
+++ b/src/docs/theme-switchers.mdx
@@ -2,6 +2,11 @@
 title: How Do The Theme Switchers Work?
 description: How the built-in theme and font switchers work.
 metas:
+  description: The theme and font switchers included with Cushy Text offer convenience, comfort and additional content accessibility. 
+  tags:
+    - Self Publishing
+    - Lume Theme
+    - Lume 3 
   image: /docs/theme-switchers/index.png
 menu:
   visible: true
