--- a/src/docs/components.mdx
+++ b/src/docs/components.mdx
@@ -3,6 +3,11 @@ title: Infima And Lume 3 Components
 description: How Infima components naturally marry to the components in Lume 3.
 metas:
   image: /docs/components/index.png
+  description: A guide to how the Lume 3 component structure is used in Cushy Text, and when the Lume 2 style should still be used.
+  tags:
+    - Self Publishing
+    - Lume Theme
+    - Lume 3 
 menu:
   visible: true
   order: 2
