--- a/src/docs/content-rating.mdx
+++ b/src/docs/content-rating.mdx
@@ -3,6 +3,12 @@ title: The Content Rating Component
 description: Which components are interactive, and how do they work?
 metas:
   image: /docs/archetypes/index.png
+  description: A guide to the interactive content rating and associated admin plugin included with Cushy Text.
+  tags:
+    - Content Rating System
+    - Self Publishing
+    - Lume Theme
+    - Lume 3 
 menu:
   visible: true
   order: 7
