Docs update for SEO

--- a/src/docs/theme-plugins.mdx
+++ b/src/docs/theme-plugins.mdx
@@ -1,5 +1,5 @@
 ---
-title: The SEO And TOC Plugins
+title: Tweaking The SEO And TOC Plugins
 description: Documentation on the Table Of Contents And SEO Plugins
 metas:
   description: Documentation on the SEO and TOC plugins that come with Cushy Text, An Interactive Theme For Lume 3
@@ -13,7 +13,7 @@ menu:
   order: 4
 ---
 
-# Cushy Docs Ships With Its Own Plugins
+# {title}
 
 I needed a lightweight TOC plugin to work independently of the 
 Markdown plugin being used, so I ended up writing one myself 
@@ -30,11 +30,9 @@ less through common mistakes.
 
 <h2 id="toc-plugin">TOC Options & configuration</h2>
 
-***The theme will not function properly with this plugin removed.***
-
-Unless, of course, you install another Markdown plugin to handle it.
-
-There are the configurable options to control generation:
+***The theme will not function properly with this plugin removed.*** Unless, of course, 
+you install another Markdown plugin to handle it. There are the configurable options to 
+control generation:
 
 | Function | Name | Type | Description | Default Value | Configured Value |
 |:-:|:-:|:-:|:-:|:-:|:-:|
