--- a/src/docs/theme-plugins.mdx
+++ b/src/docs/theme-plugins.mdx
@@ -110,6 +110,10 @@ plugin as flexible and configurable as possible:
    want to represent lengths in words, graphemes or even sentences
    instead of the default characters.
 
+ - The option to ignore pages in all locales BUT the one you specify, 
+   which makes it convenient to treat pages in different languages 
+   with different settings, generating different reports, etc.
+
 <h2 id="simple-seo-plugin-use" class="margin-top--md">Example Multi-Language Setup:</h2>
 
 Here's a complex configuration where the plugin is invoked twice, once per 
@@ -175,6 +179,9 @@ isolated specifically so I can easily control their frontmatter, e.g.:
 seo:
   skip_content: true
 ```
+
+Theme defaults are very conservative; everyone will want to configure thresholds depending
+on their needs. That's why everything (practically) is configurable:
 
 <h2 id="simple-seo-plugin-options" class="margin-top--md">All Simple SEO Plugin Options & Code Defaults:</h2>
 
