Put  a warning admonition around the seo plugin options for now

--- a/src/docs/theme-plugins.mdx
+++ b/src/docs/theme-plugins.mdx
@@ -183,6 +183,9 @@ seo:
 Theme defaults are very conservative; everyone will want to configure thresholds depending
 on their needs. That's why everything (practically) is configurable:
 
+<comp.alert type="warning" 
+  message="***Unreleased Code Warning: This list isn't fully-settled yet.***<br />I don't foresee any breaking changes, but still settling on everything and testing defaults." />
+
 <h2 id="simple-seo-plugin-options" class="margin-top--md">All Simple SEO Plugin Options & Code Defaults:</h2>
 
 | Option                             | Description                                                                                                   | Default Value          |
