conductor was eliminated a while ago.

--- a/src/docs/theme-plugins.mdx
+++ b/src/docs/theme-plugins.mdx
@@ -45,7 +45,7 @@ control generation:
 And, here's how the plugin is loaded in the theme (from `plugins.ts`):
 
 ```js
-  .use(conductor({
+  .use(toc({
     // Container where the TOC is deposited once generated
     toc_selector: "#toc",
     // Content within this container is scanned for headings
