--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -19,26 +19,27 @@ Things are pretty stable, it's time to cut a release people can update from. It'
 for this repo to just be for `cushytext.deno.dev` and release the theme from a brand new 
 repo of its own!
 
-***I still expect the first testing release (`0.0.1-rc1`) to be ready around the 
-first week of April, 2025. Here's a [release plan](https://github.com/timthepost/cushytext/blob/main/RELEASE-TODO.md) 
-(Github Link) for the release, and how the transition away from this current repo will work.***
+<comp.alert
+  type="success"
+  message="***I still expect the first testing release (`0.0.1-rc1`) to be ready around the first week of April, 2025. Here's a [release plan](https://github.com/timthepost/cushytext/blob/main/RELEASE-TODO.md) (Github Link) for the release, and how the transition away from this current repo will work.***"
+  allowDismiss="false"
+/>
 
-You're still welcome to [clone the development repo](https://github.com/timthepost/cushytext),
-but understand that you're getting a whole copy of this site, and development is moving to an 
-entirely new repository on release. This lets me do my own thing on top of the base
-template, too, and sets me up to be downstream from my own changes, which is good as they'll 
-affect me just like they affect everyone else.
+You're still welcome to [clone the development repo that also hosts 
+this website](https://github.com/timthepost/cushytext), but understand 
+that you're getting a whole copy of this site, and development is moving 
+to an entirely new repository on release.
+
+It's important, as it allows me do my own thing on top of the base
+template, and sets me up to be downstream from my own changes, which 
+is imperative as it means they'll affect me just like they affect 
+everyone else downstream.
 
 <h2 id="current_focus">Current Focus (All must be done before `0.0.1` testing release)</h2>
  - Everything needed to be a remote theme (`mod.ts` for remote files, 
    `init.ts` to generate default content) (see release plan link above)
- - The SEO plugin still needs some love:
-    - Lengths should be able to be specified as characters or words.
-    - It should use Lume's provided `page.document` object where possible 
-      to run checks.
-    - It should be able to look at only modified files on save events, 
-      inspecting all files only on startup? Nice to have.
-- The archetype scripts need some attention.
+   Other than testing and bug fixes, this is the only Cushy Text work happening 
+   right now.
 
 <h2 id="roadmap">Near-Term Roadmap: (`0.0.2 - 0.0.3`)</h2>
  - Re-doing the docs auto nav with the [Nav plugin](https://lume.land/plugins/nav/), 
@@ -46,6 +47,7 @@ affect me just like they affect everyone else.
    complications (though custom would have to follow the nav plugin output format).
    **Docs currently does not handle nested directories very well with the way it 
    generates navigation (or headings, in general)**.
+ - More robust archetype scripts and CMS integration.
  - Blogs should be able to have per-instance archive and tag pages, with control
    over layouts used for each one.
  - Have a default localization plugin / setup.
@@ -54,11 +56,6 @@ affect me just like they affect everyone else.
    FAQ component.
  - Have author bios and tag info content for tag and author pages so they're
    indexed better (already started)
- - SEO Plugin v1 rewrite should be ready by then. The one soaking in `_plugins/seo`
-   needs to be rewritten to accept lengths in chars or words, and to use the DOM API 
-   instead of fiddling with frontmatter directly. It also needs to have a better 
-   strategy for running on save events, current behavior scans all pages on every save.
-   However, the tests themselves are sound. It works well.
 
 <h2 id="contributing">Contributing</h2>
 
