--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: Overview, Status & Getting Started
+title: Overview & Quickstart
 description: "Cushy Text Releases Between 4/1/2025 and 4/15/2025!"
 menu:
   visible: true
-  order: 0
+  order: "-1"
 metas:
   tags:
     - Self Publishing
