--- a/src/docs/content-rating.mdx
+++ b/src/docs/content-rating.mdx
@@ -109,9 +109,11 @@ Or in MDX:
 If you put the following in any directory, including the `src/` root directory,
 you'll get an "admin" area that only works locally. This can be accomplished by
 taking advantage of the fact that Lume will render drafts locally if `LUME_DRAFTS`
-is set, which is also used by CushyDocs to control dev mode. I named mine `src/admin.mdx`
-because I find `http://localhost:3000/admin/` the most convenient. You do you, here's
-the sparse code you'll need:
+is set, which is also used by CushyDocs to control dev mode. I named mine `src/cushy-admin.mdx`
+because I find `http://localhost:3000/cushy-admin/` the most convenient since it doesn't
+conflict with the CMS. 
+
+You do you, here's the sparse code you'll need:
 
 ```jsx
 ---
