seo: add squelch for dev chatter in lume build log

--- a/src/docs/theme-plugins.mdx
+++ b/src/docs/theme-plugins.mdx
@@ -258,3 +258,4 @@ similar with other reports, if you're building an admin dashboard.
 | `lengthLocale`                     | The default locale to use for length checks if not determined by the page.                                    | `"en"`                 |
 | `commonWordPercentageCallback`     | A custom callback function to calculate the common word percentage.                                            | `null`                 |
 | `ignoreAllButLocale`               | Ignore any post not in this locale (useful for daisy chaining)                                                 | `null`                 |
+| `logOperations`                    | If activity (blow by blow decision making) should be logged while running. Has nothing to do with the report.  | `false` |
