chore: turns out, I was missing a lot of meta descriptions  LOL

--- a/src/features/index.mdx
+++ b/src/features/index.mdx
@@ -6,6 +6,7 @@ menu:
   visible: true
   order: 0
 metas:
+  description: Features Of Cushy Text - An Infima-Powered, Interactive, Responsive & Accessible Theme For Lume 3+
   image: /features/index.png
 ---
 # {title}
