--- a/src/index.mdx
+++ b/src/index.mdx
@@ -3,6 +3,7 @@ layout: layouts/homepage.vto
 title: Cushy Text For Lume 3
 description: An Infima-based, component-driven, text-focused interactive and accessible theme for Lume 3+.
 metas:
+  description: Features Of Cushy Text - An Infima-Powered, Interactive, Responsive & Accessible Theme For Lume 3+
   image: /index.png
 menu:
   visible: true
