locale: docs: blog: update due to repo change

--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -21,7 +21,7 @@ repo of its own!
 
 <comp.alert
   type="success"
-  message="***I still expect the first testing release (`0.0.1-rc1`) to be ready around the first week of April, 2025. Here's a [release plan](https://github.com/timthepost/cushytext/blob/main/RELEASE-TODO.md) (Github Link) for the release, and how the transition away from this current repo will work.***"
+  message="***I still expect the first testing release (`0.0.1-rc1`) to be ready around the first week of April, 2025. Here's a [release plan](https://github.com/timthepost/cushytext.deno.dev/blob/main/RELEASE-TODO.md) (Github Link) for the release, and how the transition away from this current repo will work.***"
   allowDismiss="false"
 />
 
