update docs and readme

--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -15,31 +15,19 @@ metas:
 
 # Current Status: <span class="text--success">Launching Soon!</span>
 
-Things are pretty stable, it's time to cut a release people can update from. It's also time
-for this repo to just be for `cushytext.deno.dev` and release the theme from a brand new 
-repo of its own!
+Things are at a point where I'd say they're ready. You can head over to 
+the [new repo](https://github.com/timthepost/cushytext-theme) now if you
+want!
 
-<comp.alert
-  type="success"
-  message="***I still expect the first testing release (`0.0.1-rc1`) to be ready around the first week of April, 2025. Here's a [release plan](https://github.com/timthepost/cushytext.deno.dev/blob/main/RELEASE-TODO.md) (Github Link) for the release, and how the transition away from this current repo will work.***"
-  allowDismiss="false"
-/>
+I'll be tagging in a release there soon mostly for the benefit _of the SEO plugin_, 
+which can be (and is being) tested in a stand-alone way right now. The theme itself
+will launch and appear on the Lume themes page a couple of weeks after Lume 3 
+releases.
 
-You're still welcome to [clone the development repo that also hosts 
-this website](https://github.com/timthepost/cushytext), but understand 
-that you're getting a whole copy of this site, and development is moving 
-to an entirely new repository on release.
-
-It's important, as it allows me do my own thing on top of the base
-template, and sets me up to be downstream from my own changes, which 
-is imperative as it means they'll affect me just like they affect 
-everyone else downstream.
-
-<h2 id="current_focus">Current Focus (All must be done before `0.0.1` testing release)</h2>
- - Everything needed to be a remote theme (`mod.ts` for remote files, 
-   `init.ts` to generate default content) (see release plan link above)
-   Other than testing and bug fixes, this is the only Cushy Text work happening 
-   right now.
+There will be a blog post (relatively) soon when the plugin opens for testing, and
+then again when the theme is listed on lume.land/themes/ and can be installed via
+CLI. No additional features are planned until after release of everything, just 
+bug fixes and updates in reaction to any changes in Lume 3.
 
 <h2 id="roadmap">Near-Term Roadmap: (`0.0.2 - 0.0.3`)</h2>
  - Re-doing the docs auto nav with the [Nav plugin](https://lume.land/plugins/nav/), 
@@ -68,5 +56,3 @@ live, but it does happen - if it's still broken in a few days please open an
 issue.
 
 Standard [contributing guidelines](https://www.contributor-covenant.org/version/2/1/code_of_conduct/) apply.
-
-
