Revamp the content admin plugin

--- a/src/cushy-admin.mdx
+++ b/src/cushy-admin.mdx
@@ -1,12 +1,21 @@
 ---
-title: Local Admin Area
+title: Content Admin Area
 layout: layouts/page.vto
-draft: true
+url: /content-admin/
+draft: false
 menu:
-  display: true
+  visible: false
   order: -1
+metas:
+  robots: false
 ---
 
 <h1>{title}</h1>
+
+Normally, this is only enabled locally, but since everything about this site is 
+public and it's relatively low-traffic, I'll leave it enabled for now.
+
+Also, [this link is intentionally broken](https://localhost/foo.com). You'll see 
+why below.
 
 <comp.feedbackAdmin />
