--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -13,21 +13,20 @@ metas:
   image: /docs/index.png
 ---
 
-# Current Status: <span class="text--success">Launching Soon!</span>
+# Getting Started:
 
-Things are at a point where I'd say they're ready. You can head over to 
-the [new repo](https://github.com/timthepost/cushytext-theme) now if you
-want!
+The theme isn't officially released until a short time after Lume 3 releases, 
+which will likely be mid-May 2025. I'll list the theme in the Lume Theme Gallery
+after the launch of v3 settles. There are still daily updates to contend with 
+to stay mostly lock-step with `lume-dev`.
 
-I'll be tagging in a release there soon mostly for the benefit _of the SEO plugin_, 
-which can be (and is being) tested in a stand-alone way right now. The theme itself
-will launch and appear on the Lume themes page a couple of weeks after Lume 3 
-releases.
+However, You can head over to the [theme repo](https://github.com/timthepost/cushytext-theme) 
+now if you want, and use the theme via Git. You're also welcome to use the SEO 
+plugin.
 
-There will be a blog post (relatively) soon when the plugin opens for testing, and
-then again when the theme is listed on lume.land/themes/ and can be installed via
-CLI. No additional features are planned until after release of everything, just 
-bug fixes and updates in reaction to any changes in Lume 3.
+The `0.0.1` release is still _technically_ pre-release. I'll be converting the 
+template repo over to an actual template repo once it gets listed in the theme
+registry.
 
 <h2 id="roadmap">Near-Term Roadmap: (`0.0.2 - 0.0.3`)</h2>
  - Re-doing the docs auto nav with the [Nav plugin](https://lume.land/plugins/nav/), 
