let's take the parking break off.

--- a/src/blog/seo-plugin-roadmap.mdx
+++ b/src/blog/seo-plugin-roadmap.mdx
@@ -3,7 +3,7 @@ title: SimpleSEO Static Plugin Has A Dynamic Roadmap Ahead!
 description: A rundown of major changes planned for 0.1.0
 date: '2025-04-14'
 author: Tim Post
-draft: true
+draft: false
 menu:
   visible: true
   order: 0
