--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -29,11 +29,8 @@ template repo over to an actual template repo once it gets listed in the theme
 registry.
 
 <h2 id="roadmap">Near-Term Roadmap: (`0.0.2 - 0.0.3`)</h2>
- - Re-doing the docs auto nav with the [Nav plugin](https://lume.land/plugins/nav/), 
-   which I think also helps solve the nested sections and custom sidebar import 
-   complications (though custom would have to follow the nav plugin output format).
-   **Docs currently does not handle nested directories very well with the way it 
-   generates navigation (or headings, in general)**.
+ - Docs has smart nav, but could be smarter about the styles and auto closers 
+   for categories. 
  - More robust archetype scripts and CMS integration.
  - Blogs should be able to have per-instance archive and tag pages, with control
    over layouts used for each one.
